// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData HOC with missing articleData should return the errorMain component 1`] = `
<ErrorMain
  status={200}
/>
`;

exports[`withData HOC with no data should return the errorMain component and 500 status 1`] = `
<ErrorMain
  status={500}
/>
`;

exports[`withData HOC with non 200 status should return the errorMain component 1`] = `
.c5 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c5:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c5:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c4 {
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
}

.c3 {
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0;
  font-weight: 500;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  grid-column: 1 / span 6;
  padding-bottom: 4rem;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        />
        Internal server error
      </h1>
      <p
        className="c4"
      />
      <ul>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Coming back again later
        </li>
      </ul>
      <p
        className="c4"
      >
        <a
          className="c5"
        />
      </p>
    </div>
  </div>
</main>
`;

exports[`withData HOC with valid props but different language other than service locale should return the errorMain component 1`] = `
.c5 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c5:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c5:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c4 {
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
}

.c3 {
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0;
  font-weight: 500;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  grid-column: 1 / span 6;
  padding-bottom: 4rem;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        />
        Page cannot be found
      </h1>
      <p
        className="c4"
      />
      <ul>
        <li
          className="c4"
        >
          Double checking the url
        </li>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Searching for this page using the BBC search bar
        </li>
      </ul>
      <p
        className="c4"
      >
        <a
          className="c5"
        />
      </p>
    </div>
  </div>
</main>
`;

exports[`withData HOC with valid props should return the passed in component 1`] = `
.c5 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #757575;
  border-bottom: 1px solid #757575;
}

.c5:focus {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c5:hover {
  color: #B80000;
  border-bottom: 2px solid #B80000;
}

.c4 {
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c0 {
  margin: 0 auto;
  background: #FDFDFD;
}

.c3 {
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #3F3F42;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0;
  font-weight: 500;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  grid-column: 1 / span 6;
  padding-bottom: 4rem;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    padding: 2.5rem 0;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        />
        Page cannot be found
      </h1>
      <p
        className="c4"
      />
      <ul>
        <li
          className="c4"
        >
          Double checking the url
        </li>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Searching for this page using the BBC search bar
        </li>
      </ul>
      <p
        className="c4"
      >
        <a
          className="c5"
        />
      </p>
    </div>
  </div>
</main>
`;
